--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.7.3",
     "react-router-dom": "^7.9.1"
